kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/005_superoperations_parammismatch2_inv.kmt
/* $Id: 005_superoperations_parammismatch2_inv.kmt,v 1.1 2007-09-10 08:35:12 cfaucher Exp $ */

// Test of constraints on operations
// This test must make specific errors to appear. 

package root_package;
using kermeta::standard



class A
{
   operation m(x : Object) : String is do

   end
}

class C inherits A
{
   method m(x : Object) : Void is do

   end
}

